add error logging from frontend to backend
